# Prague-Job-Scout

./: .gitignore  README.md  config.yml  pyproject.toml  requirements.txt
.github/workflows/: collect.yml
findwork/: __main__.py  collector.py  config.py  dates.py  location.py  models.py  output.py  roles.py  state.py
findwork/sources/: __init__.py  base.py  cocuma.py  company_pages.py  jenprace.py  jobs_cz.py  linkedin.py  nofluffjobs.py  prace_cz.py  startupjobs.py
tests/: test_dates.py  test_location.py  test_new_sources.py  test_roles.py  test_sources.py  test_state.py
